--- a/test_dvc.ipynb
+++ b/test_dvc.ipynb
@@ -131,10 +131,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "Para traer los archivos es simplemente configurar el remoto de la misma forma que arriba (en caso de que estés trabajando en otra máquina) y hacer `dvc pull`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
