--- a/dvc_torch.ipynb
+++ b/dvc_torch.ipynb
@@ -2,24 +2,58 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Backends disponibles: ['ffmpeg']\n"
+     ]
+    }
+   ],
    "source": [
-    "import torch"
+    "import torchaudio\n",
+    "print(f\"Backends disponibles: {torchaudio.list_audio_backends()}\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Waveform shape: torch.Size([1, 50800])\n",
+      "Sample rate: 8000\n",
+      "Label: [0, 0, 0, 0, 1, 1, 1, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "dataset = torchaudio.datasets.YESNO(root=\"../data_audio\", download=True)\n",
+    "\n",
+    "waveform, sample_rate, label = dataset[0]\n",
+    "print(f\"Waveform shape: {waveform.shape}\")\n",
+    "print(f\"Sample rate: {sample_rate}\")\n",
+    "print(f\"Label: {label}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Ejercicio:  \n",
+    "Suba a dvc el dataset descargado por torch"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "torch-env",
+   "display_name": "test-torch-fusa",
    "language": "python",
    "name": "python3"
   },
