fix dvc preprocess

--- a/dvc_torch.ipynb
+++ b/dvc_torch.ipynb
@@ -49,6 +49,21 @@
     "# Ejercicio:  \n",
     "Suba a dvc el dataset descargado por torch"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Para añadir el pre procesamiento de datos al pipeline de dvc se debe realizar lo siguiente  \n",
+    "```\n",
+    "dvc stage add -n preprocess -d preprocess.py -d ../data_audio/waves_yesno -o yesno_dataset.pt python preprocess.py --root_path ../data_audio/waves_yesno --output_path data/yesno_tensor.pt --sample_rate 8000\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
